:art: API 응답 통일 및 버그 수정